--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         document.body.appendChild(renderer.domElement);
 
         // Adding a light to the scene
-        const light = new THREE.DirectionalLight(0xffffff, 1);
-        light.position.set(5, 5, 5).normalize();
-        scene.add(light);
+        const ambientLight = new THREE.AmbientLight(0x404040, 2); // soft white light
+        scene.add(ambientLight);
+
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+        directionalLight.position.set(5, 5, 5).normalize();
+        scene.add(directionalLight);
 
         // Loading the .glb model
         const loader = new THREE.GLTFLoader();
@@ -35,13 +38,15 @@
             console.error(error);
         });
 
-        camera.position.z = 5;
+        camera.position.z = 7;
 
         // Rendering the scene
         function render() {
             requestAnimationFrame(render);
             renderer.render(scene, camera);
         }
+
+        render();
     </script>
 </body>
 </html>
