--- a/index.html
+++ b/index.html
@@ -3,50 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js Eye Model</title>
+    <title>talmetal.me</title>
     <style>
-        body { margin: 0; }
-        canvas { display: block; }
+        body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100dvh;
+        }
+        img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
     </style>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.130.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.130.0/examples/js/loaders/GLTFLoader.js"></script>
-    <script>
-        // Basic setup for the scene, camera, and renderer
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer({ antialias: true });
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
-
-        // Adding a light to the scene
-        const ambientLight = new THREE.AmbientLight(0x404040, 2); // soft white light
-        scene.add(ambientLight);
-
-        const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-        directionalLight.position.set(5, 5, 5).normalize();
-        scene.add(directionalLight);
-
-        // Loading the .glb model
-        const loader = new THREE.GLTFLoader();
-        loader.load('eye-k/Eye_K.glb', function (gltf) {
-            scene.add(gltf.scene);
-            gltf.scene.position.set(0, 0, 0);
-            render();
-        }, undefined, function (error) {
-            console.error(error);
-        });
-
-        camera.position.z = 7;
-
-        // Rendering the scene
-        function render() {
-            requestAnimationFrame(render);
-            renderer.render(scene, camera);
-        }
-
-        render();
-    </script>
+    <a href="metal.html"><img src="images/homepage_eye.jpg" alt=""></a>
 </body>
 </html>
