--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GLB Model Viewer</title>
+    <title>GLB Model Viewer - Pupil Size Control</title>
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
@@ -19,6 +19,9 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/controls/OrbitControls.js"></script>
 
     <script>
+        // API URL
+        var apiURL = 'https://script.googleusercontent.com/macros/echo?user_content_key=drCshnkWuXNLoJBnn6AoalfQD-o4_EFSGOBXyPzv_jFTaCorOwO3bhe8h0gDSwjMZBvJwGt5x_tDor8wFaXw0TkaLvQ_KVCjm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnLOhP_Yv2g7cdzrEvHyGSNEVukO7LcfqB0E5Sla7ueR41jq5zjZBMj-uZS5JNTN58D-EWxpy17moBNLfIDa8OkjcGI7lhJ_ZLw&lib=MSykVP-T6JpMcNQKt2t8MtLlZCQc5u2io';
+
         // Scene
         var scene = new THREE.Scene();
 
@@ -46,39 +49,64 @@
         // OrbitControls
         var controls = new THREE.OrbitControls(camera, renderer.domElement);
 
-        // GLTFLoader
+        // Variable to store the pupil shape
+        var pupilMorphTargetIndex = null; // Placeholder for the pupil's key shape
+        var pupilMesh = null; // Will be set once the mesh is loaded
+
+        // Load the GLB model
         var loader = new THREE.GLTFLoader();
-        loader.load(
-            'models/01_ShapKeyed_EyeBall.glb', // Replace with the path to your GLB file
-            function (gltf) {
-                var model = gltf.scene;
-                scene.add(model);
+        loader.load('models/01_ShapKeyed_EyeBall.glb', function (gltf) {
+            var model = gltf.scene;
+            scene.add(model);
 
-                // Compute the bounding box of the model
-                var box = new THREE.Box3().setFromObject(model);
-                var size = box.getSize(new THREE.Vector3());
-                var center = box.getCenter(new THREE.Vector3());
-
-                // Reposition the camera to be centered on the model
-                var maxDim = Math.max(size.x, size.y, size.z); // Get the largest dimension of the object
-                var fov = camera.fov * (Math.PI / 180); // Convert FOV to radians
-                var distance = (maxDim / 2) / Math.tan(fov / 2); // Calculate camera distance based on FOV and model size
-
-                // Move the camera to make the object 10% of the window height
-                camera.position.set(center.x, center.y, center.z + (distance * 10) / 8); // Adjust for 300% zoom
-                camera.lookAt(center);
-
-                // Update controls target to the model's center
-                controls.target.copy(center);
-                controls.update();
-            },
-            function (xhr) {
-                console.log((xhr.loaded / xhr.total * 100).toFixed(2) + '% loaded');
-            },
-            function (error) {
-                console.error('An error occurred:', error);
+            // Assume the pupil's shape key is on a mesh named 'PupilMesh' (adjust if necessary)
+            pupilMesh = model.getObjectByName('PupilMesh'); // Replace with correct name of the pupil's mesh
+            if (pupilMesh && pupilMesh.morphTargetInfluences) {
+                pupilMorphTargetIndex = 0; // Assuming the first morph target is for the pupil's size
             }
-        );
+
+            // Fetch the initial API data and set up the update loop
+            fetchAssignedValue();
+
+            // Set the model in the scene as usual
+            var box = new THREE.Box3().setFromObject(model);
+            var size = box.getSize(new THREE.Vector3());
+            var center = box.getCenter(new THREE.Vector3());
+
+            var maxDim = Math.max(size.x, size.y, size.z);
+            var fov = camera.fov * (Math.PI / 180);
+            var distance = (maxDim / 2) / Math.tan(fov / 2);
+            camera.position.set(center.x, center.y, center.z + (distance * 10) / 8);
+            camera.lookAt(center);
+            controls.target.copy(center);
+            controls.update();
+        });
+
+        // Function to fetch the Assigned Value from the API
+        function fetchAssignedValue() {
+            fetch(apiURL)
+                .then(response => response.json())
+                .then(data => {
+                    var assignedValue = data["Assigned Value"];
+
+                    // Update the pupil size based on the API value
+                    if (pupilMorphTargetIndex !== null && pupilMesh) {
+                        updatePupilSize(assignedValue);
+                    }
+
+                    // Fetch the data again after a delay (for dynamic updates)
+                    setTimeout(fetchAssignedValue, 4000); // Fetch every 4 seconds (adjust as needed)
+                })
+                .catch(error => console.error('Error fetching API data:', error));
+        }
+
+        // Function to update the pupil size
+        function updatePupilSize(value) {
+            var normalizedValue = (value - 1) / 10; // Normalize the value to a 0-1 range
+            if (pupilMesh && pupilMesh.morphTargetInfluences) {
+                pupilMesh.morphTargetInfluences[pupilMorphTargetIndex] = normalizedValue;
+            }
+        }
 
         // Animation Loop
         function animate() {
@@ -99,4 +127,5 @@
     </script>
 </body>
 </html>
+
 
