--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4D Model Viewer</title>
+    <title>3D Model Viewer</title>
     <style>
         body, html {
             margin: 0;
@@ -22,6 +22,7 @@
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/loaders/GLTFLoader.js"></script>
     
     <script>
@@ -30,9 +31,19 @@
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.setPixelRatio(window.devicePixelRatio);  // Improve rendering quality
         document.body.appendChild(renderer.domElement);
 
         camera.position.set(0, 0, 3); // Set the camera position further to ensure visibility
+
+        // Add OrbitControls for zoom and rotation
+        const controls = new THREE.OrbitControls(camera, renderer.domElement);
+        controls.enableDamping = true; // Smooth control
+        controls.dampingFactor = 0.05;
+        controls.screenSpacePanning = false;
+        controls.minDistance = 1;
+        controls.maxDistance = 10;
+        controls.enableZoom = true;
 
         // Light setup (ambient + directional light)
         const ambientLight = new THREE.AmbientLight(0xffffff, 0.5); // Soft white light
@@ -94,6 +105,7 @@
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
+            controls.update(); // Update controls in the animation loop
             renderer.render(scene, camera);
         }
 
