--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8D Model Viewer</title>
+    <title>9D Model Viewer</title>
     <style>
         body, html {
             margin: 0;
@@ -34,7 +34,8 @@
         renderer.setPixelRatio(window.devicePixelRatio);  // Improve rendering quality
         document.body.appendChild(renderer.domElement);
 
-        camera.position.set(0, 0, 0.3); // Set the camera position further to ensure visibility
+        // Set a closer initial camera position for a more zoomed-in view
+        camera.position.set(0, 0, 1.5); 
 
         // Add OrbitControls for zoom and rotation
         const controls = new THREE.OrbitControls(camera, renderer.domElement);
@@ -42,7 +43,8 @@
         controls.dampingFactor = 0.05;
         controls.screenSpacePanning = false;
         controls.enableZoom = true;
-        controls.maxDistance = 10; // Remove minDistance for unlimited zoom in
+        controls.zoomSpeed = 1.5; // Make zooming easier and faster
+        controls.maxDistance = 5;  // Restrict max distance, closer to the model
 
         // Light setup (ambient + directional light)
         const ambientLight = new THREE.AmbientLight(0xffffff, 0.5); // Soft white light
@@ -58,12 +60,12 @@
         loader.load('models/01_ShapKeyed_EyeBall.glb', function (gltf) {
             const model = gltf.scene;
 
-            // Center the model geometry
+            // Center the model geometry using its bounding box
             const box = new THREE.Box3().setFromObject(model);
             const center = box.getCenter(new THREE.Vector3());
             model.position.sub(center); // Adjust position so the model is centered
 
-            model.scale.set(0.5, 0.5, 0.5); // Scale the model if it's too large or small
+            model.scale.set(1.0, 1.0, 1.0); // Adjust the scale to make the model larger
             scene.add(model);
 
             // Center the camera controls on the model
