--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>9D Model Viewer</title>
+    <title>10D Model Viewer</title>
     <style>
         body, html {
             margin: 0;
@@ -34,8 +34,8 @@
         renderer.setPixelRatio(window.devicePixelRatio);  // Improve rendering quality
         document.body.appendChild(renderer.domElement);
 
-        // Set a closer initial camera position for a more zoomed-in view
-        camera.position.set(0, 0, 1.5); 
+        // Move the camera closer for a more zoomed-in initial view
+        camera.position.set(0, 0, 1.0); 
 
         // Add OrbitControls for zoom and rotation
         const controls = new THREE.OrbitControls(camera, renderer.domElement);
@@ -43,8 +43,8 @@
         controls.dampingFactor = 0.05;
         controls.screenSpacePanning = false;
         controls.enableZoom = true;
-        controls.zoomSpeed = 1.5; // Make zooming easier and faster
-        controls.maxDistance = 5;  // Restrict max distance, closer to the model
+        controls.zoomSpeed = 2.0; // Make zooming faster and more responsive
+        controls.maxDistance = 5;  // Restrict max distance
 
         // Light setup (ambient + directional light)
         const ambientLight = new THREE.AmbientLight(0xffffff, 0.5); // Soft white light
@@ -65,7 +65,7 @@
             const center = box.getCenter(new THREE.Vector3());
             model.position.sub(center); // Adjust position so the model is centered
 
-            model.scale.set(1.0, 1.0, 1.0); // Adjust the scale to make the model larger
+            model.scale.set(1.0, 1.0, 1.0); // Keep model larger
             scene.add(model);
 
             // Center the camera controls on the model
