--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             // Load GLTF model
             const loader = new GLTFLoader();
-            loader.load('models/06_ShapeKey_TEST.glb', (gltf) => {
+            loader.load('models/06_ShapeKey_TEST_Disc.glb', (gltf) => {
                 model = gltf.scene;
                 scene.add(model);
 
