--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4D Model Viewer</title>
+    <title>3D Model Viewer</title>
     <style>
         body, html {
             margin: 0;
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f0f0f0;
+            background-color: #333; /* Dark background to contrast the model */
         }
         #canvas-container {
             width: 100%;
@@ -34,43 +34,51 @@
 
         let scene, camera, renderer, controls, model, morphTargetMesh;
 
-        // Initialize scene, camera, and renderer
         function init() {
+            // Scene and camera setup
             scene = new THREE.Scene();
             camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 1000);
-            camera.position.set(0, 1, 3); // Zoom in and set the camera looking straight at the model
+            camera.position.set(0, 0.5, 3); // Move closer to the model
 
             renderer = new THREE.WebGLRenderer({ antialias: true });
             renderer.setSize(window.innerWidth, window.innerHeight);
+            renderer.setClearColor(0x333333); // Set a dark background
             document.getElementById('canvas-container').appendChild(renderer.domElement);
 
             // Add lighting
-            const light = new THREE.DirectionalLight(0xffffff, 1);
-            light.position.set(5, 5, 5).normalize();
-            scene.add(light);
+            const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+            directionalLight.position.set(2, 2, 5).normalize();
+            scene.add(directionalLight);
 
-            const ambientLight = new THREE.AmbientLight(0x404040, 2); // Soft light to see details
+            const ambientLight = new THREE.AmbientLight(0xffffff, 0.8);
             scene.add(ambientLight);
 
             // Load GLTF model
             const loader = new GLTFLoader();
-            loader.load('models/06_ShapeKey_TEST_Disc.glb', (gltf) => {
+            loader.load('models/06_ShapeKey_TEST.glb', (gltf) => {
                 model = gltf.scene;
                 scene.add(model);
 
-                // Find the mesh with the keyshape (morph target)
+                // Find the mesh with the morph target (keyshape)
                 morphTargetMesh = model.getObjectByName('cylinder.001');
 
-                animate(); // Start animation loop
-                updateMorphTarget(); // Update the morph target based on API value
+                if (morphTargetMesh) {
+                    console.log('Mesh with morph target found:', morphTargetMesh);
+                    updateMorphTarget(); // Adjust morph target based on API value
+                } else {
+                    console.error('Mesh with the name "cylinder.001" not found.');
+                }
+
+                animate(); // Start the render loop
+            }, undefined, (error) => {
+                console.error('Error loading the GLB model:', error);
             });
 
-            // Orbit controls for zoom and pan
+            // Orbit controls
             controls = new OrbitControls(camera, renderer.domElement);
             controls.enableDamping = true;
             controls.dampingFactor = 0.05;
             controls.enableZoom = true;
-            controls.enablePan = true;
             controls.minDistance = 1;
             controls.maxDistance = 10;
 
@@ -84,7 +92,7 @@
             renderer.setSize(window.innerWidth, window.innerHeight);
         }
 
-        // Update the morph target based on the value from the API
+        // Fetch the dynamic value from the API and update morph target
         async function updateMorphTarget() {
             try {
                 const response = await fetch('https://script.googleusercontent.com/macros/echo?user_content_key=Fflmruejr3Wo1jyoVlmm2VC9-peixwr4Zsnif-T4yQ1j3KYNXylGhL-ponqbH7bgtcSKmFwa3JjgrBClAWvLRjEYhBt4KPwMm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnLOhP_Yv2g7cdzrEvHyGSNEVukO7LcfqB0E5Sla7ueR41jq5zjZBMj-uZS5JNTN58D-EWxpy17moBNLfIDa8OkjcGI7lhJ_ZLw&lib=MSykVP-T6JpMcNQKt2t8MtLlZCQc5u2io');
@@ -96,16 +104,17 @@
 
                 if (morphTargetMesh) {
                     morphTargetMesh.morphTargetInfluences[0] = normalizedValue;
+                    console.log('Morph target influence updated:', normalizedValue);
                 }
             } catch (error) {
-                console.error('Error fetching data:', error);
+                console.error('Error fetching API data:', error);
             }
         }
 
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
-            controls.update(); // Update controls
+            controls.update();
             renderer.render(scene, camera);
         }
 
@@ -114,3 +123,4 @@
     </script>
 </body>
 </html>
+
