--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5D Model Viewer</title>
+    <title>3D Model Viewer</title>
     <style>
         body, html {
             margin: 0;
@@ -53,7 +53,7 @@
             const ambientLight = new THREE.AmbientLight(0xffffff, 0.8);
             scene.add(ambientLight);
 
-            // Load GLTF model
+            // Load GLTF model with the correct filename
             const loader = new GLTFLoader();
             loader.load('models/06_ShapeKey_TEST_Disc.glb', (gltf) => {
                 model = gltf.scene;
@@ -123,4 +123,3 @@
     </script>
 </body>
 </html>
-
