--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5D Model Viewer</title>
+    <title>7D Model Viewer</title>
     <style>
         body, html {
             margin: 0;
@@ -27,11 +27,11 @@
 <body>
     <div id="canvas-container"></div>
 
-    <script type="module">
-        import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.149.0/build/three.module.js';
-        import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.149.0/examples/jsm/loaders/GLTFLoader.js';
-        import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.149.0/examples/jsm/controls/OrbitControls.js';
+    <script src="https://cdn.jsdelivr.net/npm/three@0.149.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.149.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.149.0/examples/js/controls/OrbitControls.js"></script>
 
+    <script>
         let scene, camera, renderer, controls, model, morphTargetMesh;
 
         function init() {
@@ -54,7 +54,7 @@
             scene.add(ambientLight);
 
             // Load GLTF model with the correct filename
-            const loader = new GLTFLoader();
+            const loader = new THREE.GLTFLoader();
             loader.load('models/06_ShapeKey_TEST_Disc.glb', (gltf) => {
                 model = gltf.scene;
                 scene.add(model);
@@ -75,7 +75,7 @@
             });
 
             // Orbit controls
-            controls = new OrbitControls(camera, renderer.domElement);
+            controls = new THREE.OrbitControls(camera, renderer.domElement);
             controls.enableDamping = true;
             controls.dampingFactor = 0.05;
             controls.enableZoom = true;
