--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #333; /* Dark background to contrast the model */
+            background-color: 000; /* Dark background to contrast the model */
         }
         #canvas-container {
             width: 100%;
