--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7D Model Viewer</title>
+    <title>3D Model with Shape Key</title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
-            height: 100%;
             width: 100%;
+            height: 100%;
+            overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: 000; /* Dark background to contrast the model */
-        }
-        #canvas-container {
-            width: 100%;
-            height: 100%;
+            background-color: #f0f0f0;
         }
         canvas {
             display: block;
@@ -25,101 +22,85 @@
     </style>
 </head>
 <body>
-    <div id="canvas-container"></div>
+<canvas id="webgl-canvas"></canvas>
 
-    <script src="https://cdn.jsdelivr.net/npm/three@0.149.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.149.0/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.149.0/examples/js/controls/OrbitControls.js"></script>
+<script type="module">
+    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.144.0/build/three.module.js';
+    import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.144.0/examples/jsm/loaders/GLTFLoader.js';
+    import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.144.0/examples/jsm/controls/OrbitControls.js';
 
-    <script>
-        let scene, camera, renderer, controls, model, morphTargetMesh;
+    // Set up the scene, camera, and renderer
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(35, window.innerWidth / window.innerHeight, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('webgl-canvas'), antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
 
-        function init() {
-            // Scene and camera setup
-            scene = new THREE.Scene();
-            camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 1000);
-            camera.position.set(0, 0.5, 3); // Move closer to the model
+    // Lighting
+    const light = new THREE.DirectionalLight(0xffffff, 1);
+    light.position.set(5, 5, 5).normalize();
+    scene.add(light);
 
-            renderer = new THREE.WebGLRenderer({ antialias: true });
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            renderer.setClearColor(0x333333); // Set a dark background
-            document.getElementById('canvas-container').appendChild(renderer.domElement);
+    // Orbit Controls for zoom and pan
+    const controls = new OrbitControls(camera, renderer.domElement);
+    controls.enableZoom = true;
+    controls.maxDistance = 50;
+    controls.minDistance = 5;
 
-            // Add lighting
-            const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-            directionalLight.position.set(2, 2, 5).normalize();
-            scene.add(directionalLight);
+    // Load the GLTF model
+    const loader = new GLTFLoader();
+    let discMesh;
+    loader.load('models/06_ShapeKey_TEST_Disc.glb', (gltf) => {
+        scene.add(gltf.scene);
+        discMesh = gltf.scene.getObjectByName('cylinder.001');
 
-            const ambientLight = new THREE.AmbientLight(0xffffff, 0.8);
-            scene.add(ambientLight);
+        // Set camera position and zoom in front of the model
+        camera.position.set(0, 0, 10);
+        controls.update();
+        
+        // Fetch the API and update the shape key
+        fetchAPIAndUpdateShapeKey();
+    });
 
-            // Load GLTF model with the correct filename
-            const loader = new THREE.GLTFLoader();
-            loader.load('models/06_ShapeKey_TEST_Disc.glb', (gltf) => {
-                model = gltf.scene;
-                scene.add(model);
+    // Fetch API, normalize the value, and apply it to the DiscSize Shape Key
+    function fetchAPIAndUpdateShapeKey() {
+        fetch('https://script.googleusercontent.com/macros/echo?user_content_key=Fflmruejr3Wo1jyoVlmm2VC9-peixwr4Zsnif-T4yQ1j3KYNXylGhL-ponqbH7bgtcSKmFwa3JjgrBClAWvLRjEYhBt4KPwMm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnLOhP_Yv2g7cdzrEvHyGSNEVukO7LcfqB0E5Sla7ueR41jq5zjZBMj-uZS5JNTN58D-EWxpy17moBNLfIDa8OkjcGI7lhJ_ZLw&lib=MSykVP-T6JpMcNQKt2t8MtLlZCQc5u2io')
+            .then(response => response.json())
+            .then(data => {
+                // Extract the desired Assigned Value
+                const assignedValue = data.find(item => item["Assigned Value"] == 2.218503937007874)["Assigned Value"];
+                
+                // Normalize the value to fit within 0-1
+                const normalizedValue = normalizeValue(assignedValue, 0, 5);
 
-                // Find the mesh with the morph target (keyshape)
-                morphTargetMesh = model.getObjectByName('cylinder.001');
-
-                if (morphTargetMesh) {
-                    console.log('Mesh with morph target found:', morphTargetMesh);
-                    updateMorphTarget(); // Adjust morph target based on API value
-                } else {
-                    console.error('Mesh with the name "cylinder.001" not found.');
+                // Apply the normalized value to the shape key (DiscSize)
+                if (discMesh) {
+                    discMesh.morphTargetInfluences[discMesh.morphTargetDictionary['DiscSize']] = normalizedValue;
                 }
+            })
+            .catch(error => console.error('Error fetching the API:', error));
+    }
 
-                animate(); // Start the render loop
-            }, undefined, (error) => {
-                console.error('Error loading the GLB model:', error);
-            });
+    // Normalize function: maps value from one range to another (0-5 to 0-1)
+    function normalizeValue(value, min, max) {
+        return (value - min) / (max - min);
+    }
 
-            // Orbit controls
-            controls = new THREE.OrbitControls(camera, renderer.domElement);
-            controls.enableDamping = true;
-            controls.dampingFactor = 0.05;
-            controls.enableZoom = true;
-            controls.minDistance = 1;
-            controls.maxDistance = 10;
+    // Render loop
+    function animate() {
+        requestAnimationFrame(animate);
+        renderer.render(scene, camera);
+    }
+    animate();
 
-            window.addEventListener('resize', onWindowResize, false);
-        }
-
-        // Handle window resizing
-        function onWindowResize() {
-            camera.aspect = window.innerWidth / window.innerHeight;
-            camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-        }
-
-        // Fetch the dynamic value from the API and update morph target
-        async function updateMorphTarget() {
-            try {
-                const response = await fetch('https://script.googleusercontent.com/macros/echo?user_content_key=Fflmruejr3Wo1jyoVlmm2VC9-peixwr4Zsnif-T4yQ1j3KYNXylGhL-ponqbH7bgtcSKmFwa3JjgrBClAWvLRjEYhBt4KPwMm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnLOhP_Yv2g7cdzrEvHyGSNEVukO7LcfqB0E5Sla7ueR41jq5zjZBMj-uZS5JNTN58D-EWxpy17moBNLfIDa8OkjcGI7lhJ_ZLw&lib=MSykVP-T6JpMcNQKt2t8MtLlZCQc5u2io');
-                const data = await response.json();
-
-                // Use the first Assigned Value
-                const assignedValue = data[0]["Assigned Value"];
-                const normalizedValue = Math.min(assignedValue / 5, 1); // Normalize the value (0 to 5 scale)
-
-                if (morphTargetMesh) {
-                    morphTargetMesh.morphTargetInfluences[0] = normalizedValue;
-                    console.log('Morph target influence updated:', normalizedValue);
-                }
-            } catch (error) {
-                console.error('Error fetching API data:', error);
-            }
-        }
-
-        // Animation loop
-        function animate() {
-            requestAnimationFrame(animate);
-            controls.update();
-            renderer.render(scene, camera);
-        }
-
-        // Initialize everything
-        init();
-    </script>
+    // Handle window resizing
+    window.addEventListener('resize', () => {
+        const width = window.innerWidth;
+        const height = window.innerHeight;
+        renderer.setSize(width, height);
+        camera.aspect = width / height;
+        camera.updateProjectionMatrix();
+    });
+</script>
 </body>
 </html>
