--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         // Load GLTF model
         const loader = new GLTFLoader();
-        loader.load('models/06_ShapeKey_TEST_Disc.glb', function(gltf) {
+        loader.load('models/03_ShapeKey_TEST.glb', function(gltf) {
             const model = gltf.scene;
             scene.add(model);
 
